# Facetracker

./: .gitignore  .gitmodules  LICENSE  README.md  de.z_ray.Facetracker.desktop  de.z_ray.Facetracker.json  de.z_ray.Facetracker.metainfo.xml  de.zray.Facetracker.json  de.zray.Facetracker.json.bak  de.zray.Facetracker.metainfo.xml  de.zray.Facetracker.yml  extract_pot.sh  facetracker.spec  meson.build  pyproject.toml  python3-requirements.json  requirements.txt
facetracker/: OpenSeeFace  __init__.py  const.py  face_wrapper.py  main_frame.py  meson.build  webcam_info.py
facetracker/data/: meson.build
facetracker/data/icons/: meson.build
facetracker/data/po/: de.po  es.po  facetracker.pot  it.po  meson.build
flatpak_build/: build_flatpak.sh  flatpak-pip-generator.py
openseeface_facetracking_wrapper/: __init__.py  main_frame.py
