[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Facetracker"
description = "A wrapper UI for OpenSeeFace's Facetracker"
version = "24.7a0"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "PyGObject>=3.42.2",
]
requires-python = ">= 3.9"
authors = [
    { name = "Imo 'Vortex Acherontic' Hester", email = "vortex@z-ray.de" }
]
maintainers = [
    { name = "Imo 'Vortex Acherontic' Hester", email = "vortex@z-ray.de" }
]
keywords = ["openseeface", "facetracking", "gtk4", "adw", "libadwaita", "adwaita"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Capture",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.gui-scripts]
facetracker-gui = "facetracker:run"

[project.urls]
Homepage = "https://github.com/Z-Ray-Entertainment/Facetracker"
Documentation = "https://github.com/Z-Ray-Entertainment/Facetracker"
Repository = "https://github.com/Z-Ray-Entertainment/Facetracker.git"
Issues = "https://github.com/Z-Ray-Entertainment/Facetracker/issues"

[tool.setuptools]
py-modules = ["facetracker"]